--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.status {
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 2rem;
+}
