Added some styles

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,14 @@
   justify-content: center;
 }
 
+.board {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
 .status {
   margin-bottom: 10px;
   text-align: center;
